<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register_Tittle"
        android:textColor="@color/colorAccent"
        android:textAlignment="center"
        android:textSize="25sp"
        android:id="@+id/Registertittle"/>


    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:hint="@string/username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:hint="@string/password_hint"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/phonenumber_hint"
        android:layout_below="@id/password"
        android:inputType="phone" />

    <EditText
        android:id="@+id/Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/Age_hint"
        android:layout_below="@id/phonenumber"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/Address_hint"
        android:layout_below="@id/Age"
        android:inputType="textPersonName" />


    <Button
        android:id="@+id/btnReg"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_below="@+id/Address"
        android:padding="10dp"
        android:text="@string/RegisterButton"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        style="@style/Widget.AppCompat.Button.Colored"/>

    <TextView
        android:id="@+id/LoginFromRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginFromRegister"
        android:layout_below="@id/btnReg"
        android:layout_centerHorizontal="true"
        android:textColor="@color/HotPink"
        android:layout_marginTop="40dp" />


</RelativeLayout>