<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:src="@drawable/wplus"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/Todo"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegisterButton"
        android:id="@+id/RegisterMain"
        android:layout_above="@id/LoginMain"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LoginMain"
        android:text="@string/LoginButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        style="@style/Widget.AppCompat.Button.Colored" />
</RelativeLayout>